[package]
name = "rcl"
version = "0.4.0"
authors = ["Ruud van Asseldonk <dev@veniogames.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
unicode-width = "0.1.10"

[workspace]
members = ["fuzz", "pyrcl", "grammar/tree-sitter-rcl", "wasm"]

[profile.release]
lto = "thin"
panic = "abort"
strip = true

[profile.release-wasm]
# For wasm, we optimize for size.
inherits = "release"
lto = "fat"
codegen-units = 1
# Opt-level "z" produces slightly smaller wasm bundles than opt-level "s".
opt-level = "z"
