[package]
name = "rcl-fuzz"
version = "0.2.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = "1.3.0"
libfuzzer-sys = "0.4"
rcl = { path = ".." }
serde_json = "1.0.114"
tree-sitter = "0.20.10"
tree-sitter-rcl = { path = "../grammar/tree-sitter-rcl" }

[dependencies.toml]
version = "0.8.10"
default-features = false
features = ["parse"]

[[bin]]
name = "cli"
path = "fuzz_targets/cli.rs"
test = false
doc = false

[[bin]]
name = "escapes"
path = "fuzz_targets/escapes.rs"
test = false
doc = false

[[bin]]
name = "is_identifier"
path = "fuzz_targets/is_identifier.rs"
test = false
doc = false

[[bin]]
name = "main"
path = "fuzz_targets/main.rs"
test = false
doc = false

[[bin]]
name = "smith"
path = "fuzz_targets/smith.rs"
test = false
doc = false

[[bin]]
name = "string_len"
path = "fuzz_targets/string_len.rs"
test = false
doc = false

[[bin]]
name = "tree_sitter"
path = "fuzz_targets/tree_sitter.rs"
test = false
doc = false
