[package]
name = "rcl-fuzz"
version = "0.4.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = "1.3.0"
libfuzzer-sys = "0.4.7"
rcl = { path = ".." }
serde_json = "1.0.114"
tree-sitter = "0.20.10"
tree-sitter-rcl = { path = "../grammar/tree-sitter-rcl" }

[dependencies.toml]
version = "0.8.10"
default-features = false
features = ["parse"]

# Helper binaries

[[bin]]
name = "smithctl"
path = "tools/smithctl.rs"

# Fuzz targets

[[bin]]
name = "fuzz_cli"
path = "fuzz_targets/fuzz_cli.rs"
test = false
doc = false

[[bin]]
name = "fuzz_escapes"
path = "fuzz_targets/fuzz_escapes.rs"
test = false
doc = false

[[bin]]
name = "fuzz_is_identifier"
path = "fuzz_targets/fuzz_is_identifier.rs"
test = false
doc = false

[[bin]]
name = "fuzz_source"
path = "fuzz_targets/fuzz_source.rs"
test = false
doc = false

[[bin]]
name = "fuzz_smith"
path = "fuzz_targets/fuzz_smith.rs"
test = false
doc = false

[[bin]]
name = "fuzz_string_len"
path = "fuzz_targets/fuzz_string_len.rs"
test = false
doc = false

[[bin]]
name = "fuzz_tree_sitter"
path = "fuzz_targets/fuzz_tree_sitter.rs"
test = false
doc = false
