[package]
name = "tree-sitter-rcl"
description = "RCL grammar for the tree-sitter parsing library"
keywords = ["incremental", "parsing", "rcl"]
categories = ["parsing", "text-editors"]
version = "0.5.0"
authors = ["Ruud van Asseldonk <dev@veniogames.com>"]
edition = "2021"
license = "Apache-2.0"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.20.10"

[build-dependencies]
cc = "1.0"
